# SmartSearch

./: .gitignore  pyproject.toml
src/: candidate_builder.py  cluster_index.py  cluster_routing.py  config.py  distance_kernel.py  projection_embedder.py  semantic_dataset.py  smart_search.py  smart_search_batch.py  topk_selector.py
tests/: full_test.py
